[package]
name = "genetic_algorithm"
version = "0.1.0"
authors = ["Tommy Goris <goristommyucf@knights.ucf.edu>"]
edition = "2018"

[dependencies]
rand = "0.6.5"
plotters = { git = "https://github.com/38/plotters.git" }
gtk = "^0.7.0"
relm = "^0.17.0"
relm-derive = "^0.17.0"

[[example]]
name = "genetic_algorithm_gui"
path = "../examples/genetic_algorithm_gui/main.rs"
