[package]
name = "genetic_algorithm"
version = "0.1.0"
authors = ["Tommy Goris <goristommyucf@knights.ucf.edu>"]
edition = "2018"

[dependencies]
rand = "0.6.5"
plotters = { git = "https://github.com/38/plotters.git" }
gio = "0.7.0"
gtk =  "0.7.0"
log = "0.4.7"
simple-logging = "2.0.2"
arrayref = "0.3.4"
sha2 = "0.7.1"
relm = "0.17.0"
relm-derive = "0.17.0"
glib = "0.8.0"
crossbeam-utils = "0.6"

[[example]]
name = "genetic_algorithm_gui"
path = "../examples/genetic_algorithm_gui/main.rs"
