[package]
name = "genetic_algorithm"
version = "0.1.0"
authors = ["Tommy Goris <goristommyucf@knights.ucf.edu>"]
edition = "2018"

[dependencies]
rand = "0.6.5"
rand_chacha = "0.2.1"
log = "0.4.7"
simple-logging = "2.0.2"
arrayref = "0.3.4"
sha2 = "0.7.1"
crossbeam-utils = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"

[dev-dependencies]
reqwest = "0.10.6"
relm = "0.17.0"
relm-derive = "0.17.0"
glib = "0.8.0"
gio = "0.7.0"
gtk =  "0.7.0"

[features]
v3_22 = ["gtk/v3_22"]

[[example]]
name = "genetic_algorithm_gui"
path = "../examples/genetic_algorithm_gui/one_max/main.rs"

[[example]]
name = "nn"
path = "../examples/genetic_algorithm_gui/neural_network/images_net/main.rs"

[[example]]
name = "options"
path = "../examples/genetic_algorithm_gui/neural_network/options_ai/main.rs"